# omniterm

./: .gitignore  DESIGN.md  DOCUMENTATION.md  DRYDOCK_GUIDE.md  LICENSE  MOBAXTERM_GUIDE.md  PRD.md  README.md  RESUME.md  SKILL.md  cmd_helper_PLAN.md  cmd_helper_PRD.md  pyproject.toml  requirements.txt
src/omniterm/: __init__.py  cli.py  main.py
src/omniterm/core/: command_history.py  config.py  control.py  control_server.py  local_pty.py  predictor.py  serial_client.py  ssh_client.py  threads.py  transfer.py
src/omniterm/static/xterm/: index.html  package-lock.json  package.json
src/omniterm/ui/: icons.py  main_window.py  native_terminal.py  session_dock.py  sftp_browser.py  terminal_tab.py  theme.py
tests/: test_cli.py  test_control.py  test_shadow_predictor.py  test_threads.py  test_transfer.py
